UPD _inclues/style.css adding border to non-hover links to avoid that ugly shift when hover

--- a/_includes/style.css
+++ b/_includes/style.css
@@ -210,14 +210,18 @@ code {
 	color: rgb(95, 95, 95);
 }
 
+.post-link {
+    border: 2px solid rgb(255, 255, 255);
+    border-radius: 10px;
+    -moz-border-radius: 10px;
+}
+
 .post-link:hover {
     text-decoration: none;
 }
 
 .post-link:hover > div {
     border: 2px solid rgba(149, 55, 63, .6);
-    border-radius: 10px;
-    -moz-border-radius: 10px;
 }
 
 .post-link:hover .post-url {
